# modern_cmake_example

./: CMakeLists.txt  README.md
include/add/: add.h
include/subtract/: add.h
lib/add/: CMakeLists.txt
lib/subtract/src/: subtract.cpp
src/add/: add.cpp
src/mult/: CMakeLists.txt
src/mult/include/mult/: mult.h
src/mult/src/: mult.cpp
src/stupid-calculator/: stupid-calculator.cpp
src/subtract/: CMakeLists.txt
